--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
-         version="3.1">
+<web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
     <servlet>
         <servlet-name>AuthorController</servlet-name>
         <servlet-class>edu.wctc.nsb.controller.AuthorController</servlet-class>
@@ -11,7 +8,14 @@
         <servlet-name>AuthorController</servlet-name>
         <url-pattern>/AuthorController</url-pattern>
     </servlet-mapping>
-    
+    <servlet>
+        <servlet-name>BookController</servlet-name>
+        <servlet-class>edu.wctc.nsb.controller.BookController</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>BookController</servlet-name>
+        <url-pattern>/BookController</url-pattern>
+    </servlet-mapping>
     <context-param>
         <param-name>db.driver.class</param-name>
         <param-value>com.mysql.jdbc.Driver</param-value>
@@ -32,7 +36,6 @@
         <param-name>db.jndi.name</param-name>
         <param-value>jdbc/book</param-value>
     </context-param>
-    
     <session-config>
         <session-timeout>
             30
